Enhance activities display with participant details and improve HTML escaping

--- a/src/static/index.html
+++ b/src/static/index.html
@@ -15,6 +15,7 @@
     <main>
       <section id="activities-container">
         <h3>Available Activities</h3>
+        <p class="activities-note">Participants signed up for each activity are shown below each card.</p>
         <div id="activities-list">
           <!-- Activities will be loaded here -->
           <p>Loading activities...</p>
